@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10071] "Alle plugins modtager en IObjectRepository instans"
 part of the cleaning and taking steps towards a more robust and uniform flow of data   - bug [10467] "jmockit skal opgraderes til en version, hvor Invocations.any* er med. Skal også merges ned i trunk."
    - bug [10093] "FileHarvesterLight skal have success og failure kataloger"
    - bug [9766] "CargoContainerTest kalder metode der ikke findes"
